--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "rendiero",
   "license": "ISC",
   "dependencies": {
+    "@parcel/watcher": "^2.5.1",
     "@tailwindcss/cli": "^4.0.1",
     "tailwindcss": "^4.0.1"
   }
